# FinancialReportGenerator

./: FX.csv  articles.csv  combined_articles.csv  fx_scraper.py  kitco_scraper.py  llama3.py  main.py  pyproject.toml  replit.nix  setup.sh
